# cppygen-sample

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  cppygenconfig.toml
lib/: hoge.cpp  hoge.hpp  piyo.cpp  piyo.hpp
src/: main.cpp
